tests/paczka1/fuzzy1/53749982.err
Error in line 1: 3GCG3bA S972 67,2
Error in line 3: ItzPBlH3VwZ S146 11,2
Error in line 14: VmdAPe7AuJ S372 88,9
Error in line 27: jYDz9A7X S372 87,2
Error in line 24: VmdAPe7AuJ S972 96,7
